--- a/lib/OpenTracing/GlobalTracer.pod
+++ b/lib/OpenTracing/GlobalTracer.pod
@@ -76,17 +76,19 @@ result in errors like "can't use method ... on undef".
 
 =head1 AUTHOR
 
-=over
-
-=item Theo van Hoesel
-
-=back
+Theo van Hoesel <tvanhoesel@perceptyx.com>
 
 
 
-=head1 COPYRIGHT
+=head1 COPYRIGHT AND LICENSE
 
-2019 Perceptyx Inc, Th. J. van Hoesel
+'OpenTracing GlobalTracer' is Copyright (C) 2019, Perceptyx Inc
 
-=cut
+This package is free software; you can redistribute it and/or modify it under
+the terms of the Artistic License 2.0.
+
+This package is distributed in the hope that it will be useful, but it is
+provided "as is" and without any express or implied warranties.
+
+For details, see the full text of the license in the file LICENSE.
 
